test-cases/negative/context_001_is_without_context.lay
# negative test case: 'is' without proper context
# expected error: 'is' keyword used without valid context
# description: Tests context-aware 'is' keyword validation

x is


